Fixed, extended and refactored MySQL query generator into its own class
This changes allows implementing the unit testing of the generator.
Added the unit test for the MySQL API. Extended the generator with
functions for generating SQL clauses WHERE, ORDER BY, GROUP BY and
LIMIT. Added a generator for the DELETE query.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -75,6 +75,8 @@ target_sources(replica PRIVATE
     DatabaseMySQL.cc
     DatabaseMySQL.h
     DatabaseMySQLExceptions.h
+    DatabaseMySQLGenerator.h
+    DatabaseMySQLGenerator.cc
     DatabaseMySQLRow.cc
     DatabaseMySQLRow.h
     DatabaseMySQLTypes.cc
@@ -520,6 +522,7 @@ replica_tests(
     testJson
     testMessageQueue
     testNamedMutexRegistry
+    testQueryGenerator
     testReplicaInfo
     testSemanticMap
     testSqlSchemaUtils
