Updated the integration test data and config to allow testing RefMatch
Changed test case03 to eliminate the default parameter "default-overlap"
in the partitioned config with just "overlap". The parameter isn't used
by the partitioning tools. Set the overlap to 0.001 which is sufficient
for matching objects when partitioning the RefMatch table RefDeepSrcMatch.

Changed the overlap to 0.001 in the test case04 in sync with case03
to allow haivng both within the same database family.

Converted the table RefDeepSrcMatch to be the partitioned RefMatch
table (before the change, the table had the fully-replicated type).
Extended the data file of the table with 4 columns carrying spatial
coordinates of the matched objects. These columns are needed to
partition the table data using the tool sph-partition-matches.

Added support in the integration testing tools for partitioning
and loading the RefMatch tables.

--- a/src/admin/etc/integration_tests.yaml
+++ b/src/admin/etc/integration_tests.yaml
@@ -34,7 +34,8 @@ test_cases:
       database: data/ingest/database.json
       table: data/ingest/{table_name}.json
     tables:
-      - Object  # director table
+      - Object                 # director
+      - Source                 # child
       - Filter
       - LeapSeconds
       - Logs
@@ -42,7 +43,6 @@ test_cases:
       # - Science_Ccd_Exposure
       - sdqa_Metric
       - SimRefObject
-      - Source
     skip_numbers:
       - "0012"  # depends on a table that has currently unloadable values
       - "0012.1"  # depends on a table that has currently unloadable values
@@ -88,7 +88,10 @@ test_cases:
       database: data/ingest/database.json
       table: data/ingest/{table_name}.json
     tables:
+      - RefObject  # director, must come first.
       - RunDeepSource  # director, must come first.
+      - RunDeepForcedSource  # child of RunDeepSource
+      - RefDeepSrcMatch  # match table for RefObject and RunDeepSource
       - AvgForcedPhot
       - AvgForcedPhotYearly
       # - DeepCoadd  # error: Incorrect double value: ... for column
@@ -97,9 +100,6 @@ test_cases:
       - DeepCoadd_To_Htm10
       - Filter
       - LeapSeconds
-      - RefDeepSrcMatch
-      - RefObject
-      - RunDeepForcedSource
       # - Science_Ccd_Exposure error: Incorrect double value: ... for column
       # `qservTest_case03_qserv`.`Science_Ccd_Exposure`.`taiMjd`
       # at row 1, errno: 1366\n"
