--- a/itest_src/datasets/case03/data/description.yaml
+++ b/itest_src/datasets/case03/data/description.yaml
@@ -1,15 +1,15 @@
 tables:
     load-order: ['Science_Ccd_Exposure_Metadata_coadd_r', 'AvgForcedPhotYearly',
-        'Science_Ccd_Exposure_Metadata','ZZZ_Db_Description', 'RefObject',
-        'RefDeepSrcMatch', 'Science_Ccd_Exposure_coadd_r', 'Science_Ccd_Exposure',
+        'Science_Ccd_Exposure_Metadata','ZZZ_Db_Description',
+        'Science_Ccd_Exposure_coadd_r', 'Science_Ccd_Exposure',
         'AvgForcedPhot', 'DeepCoadd_To_Htm10', 'LeapSeconds', 'DeepCoadd',
         'DeepCoadd_Metadata', 'Science_Ccd_Exposure_To_Htm10_coadd_r',
-        'LeapSeconds', 'DeepCoadd', 'DeepCoadd_Metadata', 'Filter', 'RunDeepSource',
-        'RunDeepForcedSource',]
-    directors:          ['RunDeepSource']
-    partitioned-tables: ['RunDeepSource', 'RunDeepForcedSource']
-    views:              ['DeepForcedSource','DeepSource']
-    partitioned-views:  ['DeepForcedSource','DeepSource']
+        'LeapSeconds', 'DeepCoadd', 'DeepCoadd_Metadata', 'Filter',
+        'RefObject', 'RunDeepSource', 'RunDeepForcedSource', 'RefDeepSrcMatch']
+    directors:          ['RefObject', 'RunDeepSource']
+    partitioned-tables: ['RefObject', 'RunDeepSource', 'RunDeepForcedSource',' RefDeepSrcMatch']
+    views:              ['DeepForcedSource', 'DeepSource']
+    partitioned-views:  ['DeepForcedSource', 'DeepSource']
 extensions:
     data:   '.csv'
     schema: '.schema'
