Extended the Replication database schema and the C++ API to support warnings
Also refactored the DatabaseServices API by moving the class TransactionContribInfo
into its own header file and the implementation module.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -404,6 +404,8 @@ target_sources(replica PRIVATE
     Task.h
     TestEchoQservMgtRequest.cc
     TestEchoQservMgtRequest.h
+    TransactionContrib.cc
+    TransactionContrib.h
     TransactionsApp.cc
     TransactionsApp.h
     Url.cc
