--- a/admin/local/docker/compose/docker-compose.yml
+++ b/admin/local/docker/compose/docker-compose.yml
@@ -373,6 +373,9 @@ services:
             - type: volume
               source: repl_mgr_home
               target: /home/qserv
+            - type: bind
+              source: ../../../../src/www
+              target: /usr/local/qserv/www
             - << : *log-volume
     repl-mgr-registry:
         image: "${QSERV_IMAGE:?err}"
