Moved the utility class AsyncTimer from the unit test into its own files
This class is going to be used for implementing other unit tests
where a convenient mechanism for timing the time-sensitive
tests will be needed.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -23,6 +23,8 @@ target_sources(replica PRIVATE
     ApplicationColl.h
     ApplicationTypes.cc
     ApplicationTypes.h
+    AsyncTimer.cc
+    AsyncTimer.h
     CheckSumApp.cc
     CheckSumApp.h
     ChunkLocker.cc
