Added the unit test for the ASYNC request manager at workers
Minor refactoring in the relevant classes was made to allow using
those in the unit testing.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -523,6 +523,7 @@ replica_tests(
     testFileIngestApp
     testFileUtils
     testHttpAsyncReq
+    testIngestRequestMgr
     testJson
     testMessageQueue
     testNamedMutexRegistry
