Refactored the MySQL API
Non-specific functions were moved from the Connection class
into utilities.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -83,6 +83,8 @@ target_sources(replica PRIVATE
     DatabaseMySQLRow.h
     DatabaseMySQLTypes.cc
     DatabaseMySQLTypes.h
+    DatabaseMySQLUtils.cc
+    DatabaseMySQLUtils.h
     DatabaseServices.cc
     DatabaseServices.h
     DatabaseServicesMySQL.cc
