Implemented an adaptor for iterating over Sql results of jobs
The extended API of the class SqlResultSet utilising an existing
interface for parsing result sets. That parser was originaly
designed only for handling result sets that were directly pulled from
the MySQL connector (class replica::database::mysql::Connection).
The new feature allows reusing this mechanism for parsing result
sets received by the Master Replication Controller's SQL jobs
from the Replication system workers via the binary BOOST ASIO +
Protobuf protocol.
The new feature is meant to avoid code duplication where
a convenient mechanism for processing result sets of the Sql jobs
will be needed.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -538,6 +538,7 @@ replica_tests(
     testQueryGenerator
     testReplicaInfo
     testSemanticMap
+    testSqlResultSet
     testSqlSchemaUtils
     testTypes
     testUrl
