Add json histogram for tracking resource usage on the worker.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -420,6 +420,8 @@ target_sources(replica PRIVATE
     TransactionsApp.h
     Url.cc
     Url.h
+    UserQueryWInfo.cc
+    UserQueryWInfo.h
     VerifyApp.cc
     VerifyApp.h
     VerifyJob.cc
