--- a/src/wbase/CMakeLists.txt
+++ b/src/wbase/CMakeLists.txt
@@ -7,6 +7,7 @@ target_sources(wbase PRIVATE
     SendChannelShared.cc
     Task.cc
     TransmitData.cc
+    UserQueryWInfo.cc
     WorkerCommand.cc
 )
 
