Added QueryRequest entries.

--- a/src/qdisp/CMakeLists.txt
+++ b/src/qdisp/CMakeLists.txt
@@ -3,6 +3,7 @@ add_dependencies(qdisp proto)
 
 target_sources(qdisp PRIVATE
     ChunkMeta.cc
+    CzarStats.cc
     Executive.cc
     JobDescription.cc
     JobQuery.cc
