--- a/src/wbase/CMakeLists.txt
+++ b/src/wbase/CMakeLists.txt
@@ -4,6 +4,7 @@ add_dependencies(wbase proto)
 target_sources(wbase PRIVATE
     Base.cc
     ChannelShared.cc
+    FileChannelShared.cc
     SendChannel.cc
     SendChannelShared.cc
     Task.cc
