--- a/admin/tools/docker/base/Dockerfile
+++ b/admin/tools/docker/base/Dockerfile
@@ -56,6 +56,19 @@ RUN dnf install -y 'dnf-command(config-manager)' \
     && dnf clean all \
     && rm -rf /var/cache/yum
 
+ENV ARROW_VERSION 11.0.0
+
+RUN dnf update -y \
+    && dnf install -y \
+       https://apache.jfrog.io/artifactory/arrow/almalinux/$(cut -d: -f5 /etc/system-release-cpe | cut -d. -f1)/apache-arrow-release-latest.rpm \
+    && dnf config-manager --set-enabled epel \
+    && dnf config-manager --set-enabled powertools \
+    && dnf install -y \
+      arrow-devel-$ARROW_VERSION \
+      parquet-devel-$ARROW_VERSION \
+    && dnf clean all \
+    && rm -rf /var/cache/yum
+
 RUN curl -s "https://cmake.org/files/v3.17/cmake-3.17.2-Linux-x86_64.tar.gz" \
     | tar --strip-components=1 -xz -C /usr/local
 
@@ -193,6 +206,19 @@ RUN dnf install -y 'dnf-command(config-manager)' \
         tree \
         vim \
     && dnf module install -y mariadb/client \
+    && dnf clean all \
+    && rm -rf /var/cache/yum
+
+ENV ARROW_VERSION 11.0.0
+
+# FIXME: Keep only binaries, and not devel libraries
+RUN dnf update -y \
+    && dnf install -y \
+       https://apache.jfrog.io/artifactory/arrow/almalinux/$(cut -d: -f5 /etc/system-release-cpe | cut -d. -f1)/apache-arrow-release-latest.rpm \
+    && dnf config-manager --set-enabled epel \
+    && dnf config-manager --set-enabled powertools \
+    && dnf install -y arrow11-libs-$ARROW_VERSION \
+    && dnf install -y parquet11-libs-$ARROW_VERSION \
     && dnf clean all \
     && rm -rf /var/cache/yum
 
