Improved and extended HTTP query parser
Refined and refactored the implementation to eliminate code duplication.
Added support for parsing vectors of comma-separated integers.
Added the unit test.

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -532,6 +532,7 @@ replica_tests(
     testFileIngestApp
     testFileUtils
     testHttpAsyncReq
+    testHttpRequestQuery
     testIngestRequestMgr
     testJson
     testMessageQueue
