Minor refactoring in the time utilities

--- a/src/util/CMakeLists.txt
+++ b/src/util/CMakeLists.txt
@@ -25,6 +25,7 @@ target_sources(util PRIVATE
     ThreadPool.cc
     ThreadPriority.cc
     Timer.cc
+    TimeUtils.cc
     WorkQueue.cc
     xrootd.cc
 )
