Extended Czar-workers protocol (Protobuf) for query management
Added the corresponidng requests handler at workers. Added a new
transient class representing the API for sending query management
requests. Added a command-line tool to test requests.

--- a/src/wpublish/CMakeLists.txt
+++ b/src/wpublish/CMakeLists.txt
@@ -13,6 +13,8 @@ target_sources(wpublish PRIVATE
     GetStatusQservRequest.cc
     QservRequest.cc
     QueriesAndChunks.cc
+    QueryManagementAction.cc
+    QueryManagementRequest.cc
     RemoveChunkGroupCommand.cc
     ResourceMonitor.cc
     SetChunkListCommand.cc
@@ -27,7 +29,10 @@ target_include_directories(wpublish PRIVATE
 
 target_link_libraries(wpublish PUBLIC
     log
+    proto
+    protobuf
     XrdSsiLib
+    XrdCl
 )
 
 add_executable(testChunkInventory testChunkInventory.cc)
@@ -39,3 +44,28 @@ target_link_libraries(testChunkInventory PUBLIC
 )
 
 add_test(NAME testChunkInventory COMMAND testChunkInventory)
+
+
+FUNCTION(WPUBLISH_UTILS)
+    FOREACH(UTIL IN ITEMS ${ARGV})
+        add_executable(${UTIL})
+        target_sources(${UTIL} PRIVATE ${UTIL}.cc)
+        target_include_directories(${UTIL} PRIVATE ${XROOTD_INCLUDE_DIRS})
+        target_link_libraries(${UTIL} PRIVATE
+            crypto
+            pthread
+            util
+            wpublish
+            xrdsvc
+        )
+        install(TARGETS ${UTIL})
+    ENDFOREACH()
+ENDFUNCTION()
+
+wpublish_utils(
+    qserv-query-management
+)
+
+install(
+    TARGETS wpublish
+)
