Moved the SSI request classes into a dedicated module xrdreq

--- a/src/ccontrol/CMakeLists.txt
+++ b/src/ccontrol/CMakeLists.txt
@@ -45,6 +45,7 @@ FUNCTION(ccontrol_tests)
             qserv_meta
             query
             rproc
+            xrdreq
             Boost::unit_test_framework
             Threads::Threads
         )
