--- a/src/query/CMakeLists.txt
+++ b/src/query/CMakeLists.txt
@@ -59,6 +59,7 @@ FUNCTION(query_tests)
             qserv_meta
             query
             rproc
+            xrdreq
             Boost::unit_test_framework
             Threads::Threads
         )
