--- a/src/rproc/CMakeLists.txt
+++ b/src/rproc/CMakeLists.txt
@@ -28,6 +28,7 @@ FUNCTION(rproc_tests)
             qserv_css
             qserv_meta
             rproc
+            xrdreq
             Boost::unit_test_framework
             Threads::Threads
         )
