--- a/src/qana/CMakeLists.txt
+++ b/src/qana/CMakeLists.txt
@@ -35,6 +35,7 @@ FUNCTION(qana_tests)
             qserv_css
             qserv_meta
             rproc
+            xrdreq
             Boost::unit_test_framework
             Threads::Threads
         )
