Extended Replication Framework to pull status of worker databases

--- a/src/replica/CMakeLists.txt
+++ b/src/replica/CMakeLists.txt
@@ -144,6 +144,8 @@ target_sources(replica PRIVATE
     FixUpJob.h
     GetReplicasQservMgtRequest.cc
     GetReplicasQservMgtRequest.h
+    GetDbStatusQservMgtRequest.cc
+    GetDbStatusQservMgtRequest.h
     GetStatusQservMgtRequest.cc
     GetStatusQservMgtRequest.h
     HealthMonitorTask.cc
