The minor extension made to the MySQL connector
Also added the utility class to handle simple query cases.

--- a/src/mysql/CMakeLists.txt
+++ b/src/mysql/CMakeLists.txt
@@ -5,6 +5,7 @@ target_sources(mysql PRIVATE
     LocalInfile.cc
     MySqlConfig.cc
     MySqlConnection.cc
+    MySqlUtils.cc
     RowBuffer.cc
     SchemaFactory.cc
 )
