--- a/admin/local/docker/compose/docker-compose.yml
+++ b/admin/local/docker/compose/docker-compose.yml
@@ -378,6 +378,7 @@ services:
           --qserv-czar-db=mysql://root:CHANGEME@czar-db:3306/qservMeta
           --log-cfg-file=/config-etc/log/log-repl-controller.cnf
           --
+          --qserv-czar-proxy=mysql://qsmaster@czar-proxy:4040
           --instance-id=qserv_proj
           --auth-key=replauthkey
           --admin-auth-key=repladminauthkey
